--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
   display: none; 
 }
 
@@ -12,7 +12,7 @@ html {
 
 body {
   -ms-overflow-style: none;
-}
+} */
 
 
 .with-scroll-bars-hidden {
