--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
   display: none; 
 }
 
@@ -12,51 +12,6 @@ html {
 
 body {
   -ms-overflow-style: none;
-} */
-
-
-.with-scroll-bars-hidden {
-  overflow: hidden !important;
-  padding-right: 0px !important;
- }
- body[data-scroll-locked] {
-   overflow: hidden !important;
-   overscroll-behavior: contain;
-   position: relative !important;
-   padding-left: 0px;
-   padding-top: 0px;
-   padding-right: 0px;
-   margin-left:0;
-   margin-top:0;
-   margin-right: 0px !important;
-   
- }
- 
- .right-scroll-bar-position {
-   right: 0px !important;
- }
- 
- .width-before-scroll-bar {
-   margin-right: 0px !important;
- }
- 
- .right-scroll-bar-position .right-scroll-bar-position {
-   right: 0 !important;
- }
- 
- .width-before-scroll-bar .width-before-scroll-bar {
-   margin-right: 0 !important;
- }
- 
- body[data-scroll-locked] {
-   --removed-body-scroll-bar-size: 0px;
- }
-
-
-@media screen and (prefers-reduced-motion: reduce) {
-  html {
-    scroll-behavior: auto;
-  }
 }
 
 
