--- a/app/globals.css
+++ b/app/globals.css
@@ -15,6 +15,43 @@ body {
 }
 
 
+.with-scroll-bars-hidden {
+  overflow: hidden !important;
+  padding-right: 0px !important;
+ }
+ body[data-scroll-locked] {
+   overflow: hidden !important;
+   overscroll-behavior: contain;
+   position: relative !important;
+   padding-left: 0px;
+   padding-top: 0px;
+   padding-right: 0px;
+   margin-left:0;
+   margin-top:0;
+   margin-right: 0px !important;
+   
+ }
+ 
+ .right-scroll-bar-position {
+   right: 0px !important;
+ }
+ 
+ .width-before-scroll-bar {
+   margin-right: 0px !important;
+ }
+ 
+ .right-scroll-bar-position .right-scroll-bar-position {
+   right: 0 !important;
+ }
+ 
+ .width-before-scroll-bar .width-before-scroll-bar {
+   margin-right: 0 !important;
+ }
+ 
+ body[data-scroll-locked] {
+   --removed-body-scroll-bar-size: 0px;
+ }
+
 @layer base {
   :root {
     --background: 0 0% 100%;
